(executable
 (name game_js)
 (modes js)
 (modules game_js)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries game js_of_ocaml gfx_jsoo)
 (js_of_ocaml 
     (javascript_files "../resources/static/level.txt")
     (flags --file=../resources/static/level.txt -I . )
  )
 )


(executable
 (name game_sdl)
 (modes native)
 (modules game_sdl)
 (libraries game gfx_sdl tsdl tsdl_image tsdl_ttf)
)
